--- a/contactus.html
+++ b/contactus.html
@@ -15,31 +15,28 @@
 <body>
   <header>
     <div class="logo-container">
-      <a href="main.html" style="text-decoration:none;font-weight: 400;margin:7% 7%; background-color: rgb(4, 4, 60);">
-        <h3> Asar Residentials</h3>
+      <a href="homepage.php" style="text-decoration:none;color: white; padding:15px;   font: italic small-caps bold 12px/30px Georgia, serif;
+ font-weight: 1000;margin:7% 7%; background-color: black;">
+        <h3>Asar Residentials</h3>
       </a>
     </div>
     <nav>
-      <ul class="nav-links">
-        <li><a class="nav-link" href="contactus.html">Contact Us</a></li>
+      <ul class="nav-links" style="margin-left:-500px; padding:350px;">
         <li><a class="nav-link" href="residents.html">Residents</a></li>
-        
-
+        <li><a class="nav-link" href="login.php">User Login</a></li>
+        <li><a class="nav-link" href="adminlogin.php">Admin Login</a></li>
+        <li><a class="nav-link" href="contactus.html">Contact Us</a></li>
+        <li><a class="nav-link" href="https://www.google.com/maps/@36.6728673,30.5570388,16.24z"target="_blank">Where Are We?</a></li>
       </ul>
     </nav>
-    <div class="cart">
-      <ul class="nav-links">
-        <li>
-          <p>
-            <a href="https://www.google.com/maps/@36.6728673,30.5570388,16.24z"target="_blank" class="btn btn-info btn-lg">
-              <span class="glyphicon glyphicon-log-out"></span> Where Are We?
-            </a>
-          </p>
-        </li>
-      </ul>
+  </header> <br>
+  <div class="row">
+    <div class="col-sm-2">
     </div>
-  </header>
-  <br><br><br><br><br><br>
+    <div class="col-sm-8">
+      <br><br>
+
+  <br>
   <div class="row">
     <div class="col-sm-2">
     </div>
