--- a/residents.html
+++ b/residents.html
@@ -7,28 +7,56 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/homepage.css">
 
   <title>Asar Residentials</title>
 </head>
 
 <body>
   <header>
-    <div class="logo-container">
+     <div class="logo-container">
       <a href="homepage.php" style="text-decoration:none;color: white; padding:15px;   font: italic small-caps bold 12px/30px Georgia, serif;
  font-weight: 1000;margin:7% 7%; background-color: black;">
         <h3>Asar Residentials</h3>
       </a>
     </div>
-    <nav>
-      <ul class="nav-links" style="margin-left:-500px; padding:350px;">
-        <li><a class="nav-link" href="residents.html">Residents</a></li>
-        <li><a class="nav-link" href="login.php">User Login</a></li>
-        <li><a class="nav-link" href="adminlogin.php">Admin Login</a></li>
-        <li><a class="nav-link" href="contactus.html">Contact Us</a></li>
-        <li><a class="nav-link" href="https://www.google.com/maps/@36.6728673,30.5570388,16.24z"target="_blank">Where Are We?</a></li>
-      </ul>
-    </nav>
+    
+   
+    <nav class="navbar sticky-top  navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Welcome</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="homepage.php">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="residents.html">Residents</a>
+      </li>
+      <li class="nav-item">
+      <a class="nav-link" href="https://www.google.com/maps/@36.6728673,30.5570388,16.24z"target="_blank">Navigation</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contactus.html">Contact</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Login
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="login.php">User Login</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="adminlogin.php">Admin Login</a>
+        </div>
+      </li>
+    </ul>
+  
+  </div>
+</nav>
+
   </header> <br>
   <div class="row">
     <div class="col-sm-2">
